--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.0.4",
+    "@headlessui/tailwindcss": "^0.2.1",
     "@heroicons/react": "^2.1.4",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
