--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "@headlessui/tailwindcss": "^0.2.1",
     "@heroicons/react": "^2.1.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tremor/react": "^3.17.2",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
