--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,12 @@
     "@heroicons/react": "^2.1.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tremor/react": "^3.17.2",
+    "flowbite-react": "^0.9.0",
     "next": "14.2.4",
+    "plotly.js": "^2.33.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-plotly.js": "^2.6.0",
     "swr": "^2.2.5"
   },
   "devDependencies": {
