--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,14 @@
     "@heroicons/react": "^2.1.4",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tremor/react": "^3.17.2",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "flowbite-react": "^0.9.0",
     "next": "14.2.4",
     "plotly.js": "^2.33.0",
+    "prettier": "^3.3.2",
+    "prettier-eslint": "^16.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-plotly.js": "^2.6.0",
