--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/plotly.js": "^2.35.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
