--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,5 +1,6 @@
 {
-    "semi": true,
-    "singleQuote": false,
-    "trailingComma": "none"
+  "endOfLine": "lf",
+  "semi": true,
+  "singleQuote": false,
+  "trailingComma": "none"
 }
